--- a/red-team-portfolio/.gitignore
+++ b/red-team-portfolio/.gitignore
@@ -1,20 +1,26 @@
-# Dependencies
+# System files
+.*
+!/.gitignore
+!/.gitattributes
+
+# Node.js
 node_modules/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+.npm
+.nvm
 
-# Next.js
+# Build outputs
 .next/
 out/
+dist/
 build/
+.tsbuildinfo
 
 # Environment variables
-.env
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
+.env*
+!.env.example
 
 # IDE
 .vscode/
@@ -29,33 +35,22 @@ Thumbs.db
 # Logs
 *.log
 
-# Runtime data
-pids
-*.pid
-*.seed
-*.pid.lock
+# Cache
+.cache/
+.yarn/
+.pnp.*
 
-# Coverage directory used by tools like istanbul
-coverage/
+# Temporary files
+*.tmp
+*.temp
 
-# nyc test coverage
-.nyc_output
-
-# Dependency directories
-jspm_packages/
-
-# Optional npm cache directory
-.npm
-
-# Optional REPL history
-.node_repl_history
-
-# Output of 'npm pack'
-*.tgz
-
-# Yarn Integrity file
-.yarn-integrity
-
-# Large video files (keep only optimized ones)
-vecteezy_*.mp4
-vecteezy_*.mov
+# Superproductivity and other system directories
+superproductivity/
+.cursor/
+.config/
+.local/
+.mozilla/
+.ssh/
+.oh-my-zsh/
+.var/
+.vscode-oss/
