--- a/red-team-portfolio/package.json
+++ b/red-team-portfolio/package.json
@@ -12,6 +12,9 @@
     "@mdx-js/loader": "^3.0.0",
     "@mdx-js/react": "^3.0.0",
     "@next/mdx": "^14.2.5",
+    "@xterm/addon-fit": "^0.10.0",
+    "@xterm/addon-web-links": "^0.11.0",
+    "@xterm/xterm": "^5.5.0",
     "framer-motion": "^11.0.0",
     "next": "14.2.5",
     "next-mdx-remote": "^5.0.0",
