docs: comprehensive portfolio documentation suite
Complete professional documentation demonstrating security-first development:

📁 Documentation Structure:
- docs/QA-REPORT.md - 3-layer testing methodology & results
- docs/SECURITY.md - Threat model & security architecture
- docs/ARCHITECTURE.md - Technical decisions & trade-offs
- docs/TERMINAL-COMMANDS.md - Complete command reference
- docs/PERFORMANCE.md - Optimization strategies & budgets
- docs/LESSONS-LEARNED.md - Technical challenges & insights

📋 Project Management:
- CHANGELOG.md - Version history & release notes
- CONTRIBUTING.md - Collaboration guidelines
- LICENSE - MIT License
- .env.example - Environment setup template

🎨 Enhanced About Page:
- Portfolio Development Process section
- Security-First Architecture showcase
- Comprehensive Testing methodology
- Adversarial Mindset demonstration
- Documentation as Portfolio Artifact

📊 Enhanced README:
- Project stats badges
- Comprehensive documentation links
- Updated domain (darriusgrate.vercel.app)
- Professional presentation

🏗️ Organized Archive:
- Moved old reports to docs/archive/
- Clean project structure
- Professional organization

This documentation demonstrates:
✅ Systematic QA methodology (10+ hours testing)
✅ Security-first architecture & threat modeling
✅ Technical communication skills
✅ Professional development practices
✅ Red team methodology & adversarial thinking

Ready for hiring manager review and professional use.

--- a/red-team-portfolio/.env.example
+++ b/red-team-portfolio/.env.example
@@ -1,11 +1,33 @@
-# Formspree Configuration
+# Red Team Portfolio Environment Variables
+# Copy this file to .env.local and fill in your actual values
+
+# Formspree Contact Form Configuration
+# 1. Sign up at https://formspree.io
+# 2. Create a new form
+# 3. Copy the form ID (e.g., mjkalgaj)
+# 4. Add it below
 NEXT_PUBLIC_FORMSPREE_ID=your_formspree_id_here
 
-# GitHub Configuration
+# GitHub Stats Integration
+# Your GitHub username for live stats display
+# Used by the GitHub API to fetch repository and activity data
 NEXT_PUBLIC_GITHUB_USERNAME=your_github_username
 
 # Google Analytics Configuration
+# 1. Sign up at https://analytics.google.com
+# 2. Create a GA4 property
+# 3. Copy the Measurement ID (format: G-XXXXXXXXXX)
+# 4. Add it below
 NEXT_PUBLIC_GA_ID=your_google_analytics_id
 
 # Base URL Configuration
+# Your production domain URL
+# Used for metadata, SEO, and social sharing
+# Examples:
+# - Production: https://darriusgrate.vercel.app
+# - Development: http://localhost:3000
 NEXT_PUBLIC_BASE_URL=https://your-domain.com
+
+# Optional: Custom Port for Development
+# Uncomment and modify if you want to use a different port
+# PORT=3001
